--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "http://psychicseizures.github.io/searchformusic/",
+  "homepage": "https://psychicseizures.github.io/searchformusic/",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
