--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 { 
-  "homepage": "https://psychicseizures.github.io/searchformusic/",
+  
   "name": "react-app",
   "version": "0.1.0",
+  "homepage": "https://psychicseizures.github.io/searchformusic/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -21,11 +22,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
