--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{ 
-  
+{
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +14,6 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
@@ -23,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +41,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^6.1.0"
+  "devDependencies": {},
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
+
